tests/component_syntax_unsupported/component_syntax_unsupported.exp
Error ------------------------------------------------------------------------------------------------------ test.js:1:1

Component syntax is not enabled. [unsupported-syntax]

   1| component Comp() {} // error: unsupported
      ^^^^^^^^^^^^^^^^^^^



Found 1 error
